# dingofs

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  cache_group.proto  ci-build.yml
integration/lmcache/: .gitignore  CMakeLists.txt  Makefile  README.md  TEST.md  pyproject.toml  setup.py
integration/lmcache/bench/: rdma_off.conf  rdma_on.conf  run_matrix.sh
integration/lmcache/csrc/: completion_queue.cc  completion_queue.h  module.cc  native_engine.cc  native_engine.h  rdma_memory_registry.cc  rdma_memory_registry.h
integration/lmcache/docs/: design.md  tuning.md  usage.md
integration/lmcache/examples/: _arena_lmcache.py  _fake_lmcache.py  client.py  client_raw.py
integration/lmcache/tests/: conftest.py  test_key_mapper.py  test_native_smoke.py  test_url_parse.py
src/cache/: CMakeLists.txt  README.md  dingo_cache.cc  dingo_cache.cpp  dingo_cache.h  main.cpp  server.cpp  server.h
src/cache/api/: block_cache.h
src/cache/bench/: CMakeLists.txt  benchmarker.cc  benchmarker.h  collector.cc  collector.h  factory.cc  factory.h  main.cc  option.cc  option.h  reporter.cc  reporter.h  worker.cc  worker.h
src/cache/benchmark/: CMakeLists.txt  ENV.md  README.md  benchmarker.cc  benchmarker.cpp  benchmarker.h  collector.cc  collector.cpp  collector.h  factory.cc  factory.cpp  factory.h  helper.cpp  helper.h  main.cc  main.cpp  option.cc  option.h  reporter.cc  reporter.cpp  reporter.h  run_rdma_cache_bench.sh  worker.cc  worker.cpp  worker.h
src/cache/blockcache/: CMakeLists.txt  admission.cc  admission.h  aio.h  aio_queue.cc  aio_queue.h  block_cache.cpp  block_cache.h  block_cache_impl.cc  block_cache_impl.cpp  block_cache_impl.h  block_cache_metric.h  block_cache_throttle.cpp  block_cache_throttle.h  block_cache_upload_queue.h  block_cache_uploader.cc  block_cache_uploader.cpp  block_cache_uploader.h  block_cache_uploader_cmmon.h  block_cache_uploader_common.cpp  block_prefetcher.cpp  block_prefetcher.h  cache_store.h  countdown.cpp  countdown.h  disk_cache.cc  disk_cache.cpp  disk_cache.h  disk_cache_group.cc  disk_cache_group.cpp  disk_cache_group.h  disk_cache_layout.h  disk_cache_loader.cc  disk_cache_loader.cpp  disk_cache_loader.h  disk_cache_manager.cc  disk_cache_manager.cpp  disk_cache_manager.h  disk_cache_metric.h  disk_cache_watcher.cc  (+28 more)
src/cache/cachegroup/: CMakeLists.txt  async_cache.cpp  async_cache.h  async_cacher.cpp  cache_group_node.cpp  cache_group_node.h  cache_group_node_heartbeat.cpp  cache_group_node_heartbeat.h  cache_group_node_member.cpp  cache_group_node_member.h  cache_group_node_server.cc  cache_group_node_server.cpp  cache_group_node_server.h  cache_group_node_service.cpp  cache_group_node_service.h  node.cc  node.h  server.cc  server.h  service.cc  service.h  service_closure.h  task_tracker.cpp  task_tracker.h
src/cache/common/: CMakeLists.txt  aio_queue.cpp  aio_queue.h  block_handle_helper.h  block_key_helper.h  common.h  config.cpp  config.h  const.h  dynamic_config.cpp  dynamic_config.h  errno.cpp  errno.h  error.cc  io_buffer.cpp  io_buffer.h  latency_trace.h  local_filesystem.cpp  local_filesystem.h  log.cpp  log.h  macro.h  mds_client.cc  mds_client.cpp  mds_client.h  mds_discovery.cpp  memory_pool.cc  memory_pool.h  options.h  phase_timer.cpp  phase_timer.h  posix.cpp  posix.h  proto.h  s3_client.cpp  s3_client.h  s3_client_pool.cpp  s3_client_pool.h  segments.h  slab_allocator.cc  (+14 more)
src/cache/config/: benchmark.cpp  benchmark.h  block_cache.cpp  block_cache.h  blockcache.cpp  blockcache.h  cache_group.cpp  cache_group.h  cachegroup.cpp  cachegroup.h  common.cpp  common.h  config.h  helper.h  remote_cache.cpp  remote_cache.h  stub.cpp  tiercache.cpp  tiercache.h
src/cache/docs/: README.md  ssd-io-characteristics.md
src/cache/infiniband/: CMakeLists.txt  client.cc  client.h  client_session.cc  client_session.h  common.h  connection.cc  connection.h  controller.h  event.cc  event.h  helper.cc  helper.h  infiniband.cc  infiniband.h  memory.cc  memory.h  protocol.cc  protocol.h  reader.cc  reader.h  sender.cc  sender.h  server.cc  server.h  server_session.cc  server_session.h  service.cc  service.h  slab_pool.cc  slab_pool.h  waiter.h
src/cache/iutil/: buffer_pool.h  inflight_tracker.h  state_machine.h  state_machine_impl.cc  state_machine_impl.h  task_execution_queue.h
src/cache/local/: CMakeLists.txt  aio.h  aio_queue.cc  aio_queue.h  block_cache_uploader.cc  block_cache_uploader.h  cache_entry.h  cache_policy.cc  cache_policy.h  cache_store.h  disk_cache.cc  disk_cache.h  disk_cache_group.cc  disk_cache_group.h  disk_cache_layout.h  disk_cache_loader.cc  disk_cache_loader.h  disk_cache_manager.cc  disk_cache_manager.h  disk_cache_watcher.cc  disk_cache_watcher.h  disk_health_checker.cc  disk_health_checker.h  io_uring.cc  io_uring.h  local_block_cache.cc  local_block_cache.h  local_filesystem.cc  local_filesystem.h  lru_cache.cc  lru_cache.h  lru_policy.cc  lru_policy.h  mem_cache.cc  mem_cache.h  none_policy.h  s3fifo_policy.cc  s3fifo_policy.h  sieve_policy.cc  sieve_policy.h  (+2 more)
src/cache/metric/: disk_cache_metric.h
src/cache/node/: CMakeLists.txt  cache_server.cc  cache_server.h  dingo_cache.cc  dingo_cache.h  heartbeat.cc  heartbeat.h  main.cc  node.cc  node.h  service.cc  service.h
src/cache/remote/: CMakeLists.txt  remote_block_cache.cc  remote_block_cache.h  remote_cache_cluster.cc  remote_cache_cluster.h  remote_node.cc  remote_node.h  remote_node_connection.cc  remote_node_connection.h  remote_node_group.cc  remote_node_group.h  remote_node_health_checker.cc  remote_node_health_checker.h  request.h
src/cache/remotecache/: CMakeLists.txt  async_filler.cpp  block_fetcher.cc  peer.cc  peer.h  peer_connection.cc  peer_connection.h  peer_group.cc  peer_group.h  peer_health_checker.cc  rdma_buffer_manager.cc  rdma_buffer_manager.h  rdma_region_registry.cc  rdma_region_registry.h  remote_block_cache.cc  (+26 more)
src/client/: CMakeLists.txt  dingo_fuse_op.cpp  fuse_client.cpp  fuse_client.h  fuse_s3_client.cpp  fuse_s3_client.h  in_time_warmup_manager.cpp  main.cc  main.cpp
test/cache/: CMakeLists.txt
(+1348 files in other folders)
