[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dingofs-connector"
version = "0.1.2"
description = "LMCache connector for DingoFS distributed cache"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Wine93", email = "wine93.info@gmail.com" }]
dependencies = [
  "lmcache",
  "torch",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dingofs_connector = ["_dingofs_native*.so"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: tests requiring a live dingo-mds + dingo-cache cluster",
]
